B3. Vectorization and padding process

--- a/d604_task_2.ipynb
+++ b/d604_task_2.ipynb
@@ -2038,6 +2038,277 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Before we can apply padding, we must first convert our lemmatized text into numeric sequences. Neural networks cannot process text directly, they require numeric input. So this section will cover both vectorization (the text-to-numbers conversion) and padding."
+      ],
+      "metadata": {
+        "id": "tNnkyUrmYLte"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Vectorization**"
+      ],
+      "metadata": {
+        "id": "QNVPl3gVZnZ1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+        "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+        "\n",
+        "# Initialize Keras Tokenizer\n",
+        "tokenizer = Tokenizer(\n",
+        "    num_words=None,     # Use all words, no vocabulary limit\n",
+        "    oov_token='<OOV>',  # Out-of-vocabulary token\n",
+        "    lower=False         # Already lowercased during cleaning\n",
+        ")\n",
+        "\n",
+        "# Fit tokenizer on lemmatized text\n",
+        "tokenizer.fit_on_texts(df['review_processed'])\n",
+        "\n",
+        "# Get vocabulary information\n",
+        "word_index = tokenizer.word_index\n",
+        "vocab_size = len(word_index)\n",
+        "print(f\"Vocabulary built: {vocab_size:,} unique words\")\n",
+        "\n",
+        "# Convert text to sequences\n",
+        "sequences = tokenizer.texts_to_sequences(df['review_processed'])\n",
+        "print(f\"Converted {len(sequences):,} reviews to numeric sequences\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Y_GZa3LFYcfG",
+        "outputId": "a3853af7-4b10-46dc-da00-8e2b079d1744"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Vocabulary built: 1,689 unique words\n",
+            "Converted 990 reviews to numeric sequences\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Show example conversion\n",
+        "example_idx = 5\n",
+        "print(f\"Example Conversion:\")\n",
+        "print(\"=\" * 60)\n",
+        "print(f\"Original text: '{df['review_processed'].iloc[example_idx]}'\")\n",
+        "print(f\"Tokens: {df['tokens'].iloc[example_idx]}\")\n",
+        "print(f\"Numeric sequence: {sequences[example_idx]}\")\n",
+        "print(f\"Sequence length: {len(sequences[example_idx])} tokens\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zC9UblZgYkST",
+        "outputId": "ac681ea8-f7a0-4932-c56e-1e9f1bc30364"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Example Conversion:\n",
+            "============================================================\n",
+            "Original text: 'i have to jiggle the plug to get it to line up right to get decent volume'\n",
+            "Tokens: ['i', 'have', 'to', 'jiggle', 'the', 'plug', 'to', 'get', 'it', 'to', 'line', 'up', 'right', 'to', 'get', 'decent', 'volume']\n",
+            "Numeric sequence: [3, 25, 9, 780, 2, 148, 9, 51, 4, 9, 274, 57, 149, 9, 51, 336, 150]\n",
+            "Sequence length: 17 tokens\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Vectorization is the processing of converting text tokens into sequences of integers. Each unique word in our vocabulary is assigned a unique integer index, and reviews are represented as sequences of these indices.\n",
+        "\n",
+        "I used Keras Tokenizer from TensorFlow to perform the conversion. The tokenizer builds a vocabulary index (word-to-integer mapping), converts each review into a sequence of integers, and handles out-of-vocabulary (OOV) words. OOV refers to words that may find themselves in the validation or testing dataset that were never present in the training data when the model was trained. So these words may be brand new to the model."
+      ],
+      "metadata": {
+        "id": "eNjTkS7vYnrW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Padding**"
+      ],
+      "metadata": {
+        "id": "6B_-iPtmZrCQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define maximum sequence length (from Part B1 analysis)\n",
+        "max_sequence_length = 50\n",
+        "\n",
+        "# Apply padding\n",
+        "padded_sequences = pad_sequences(\n",
+        "    sequences,\n",
+        "    maxlen=max_sequence_length,\n",
+        "    padding='post',     # Add zeros to the end of sequences\n",
+        "    truncating='post',  # Truncate from the end if too long\n",
+        "    value=0             # Use 0 as padding value\n",
+        ")\n",
+        "\n",
+        "print(f\"Padded Sequences Shape: {padded_sequences.shape}\")\n",
+        "print(f\"Number of reviews: {padded_sequences.shape[0]:,}\")\n",
+        "print(f\"Sequence length: {padded_sequences.shape[1]}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uViS9u6FZs7V",
+        "outputId": "ca520ba2-b6a5-4747-fa9b-f7c37b8f139a"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Padded Sequences Shape: (990, 50)\n",
+            "Number of reviews: 990\n",
+            "Sequence length: 50\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Example: Short sequence requiring padding\n",
+        "short_idx = 5\n",
+        "print(\"Example: Padded Sequence\")\n",
+        "print(\"=\" * 60)\n",
+        "print(f\"Original text: '{df['review_processed'].iloc[short_idx]}'\")\n",
+        "print(f\"\\nOriginal sequence (length {len(sequences[short_idx])}):\")\n",
+        "print(sequences[short_idx])\n",
+        "print(f\"\\nPadded sequence (length {max_sequence_length}):\")\n",
+        "print(padded_sequences[short_idx])\n",
+        "print(f\"\\nExplanation: {max_sequence_length - len(sequences[short_idx])} zeros added at the end\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KQrbcdJXZwbV",
+        "outputId": "3067867b-95ba-400b-e1f1-90b4d0259809"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Example: Padded Sequence\n",
+            "============================================================\n",
+            "Original text: 'i have to jiggle the plug to get it to line up right to get decent volume'\n",
+            "\n",
+            "Original sequence (length 17):\n",
+            "[3, 25, 9, 780, 2, 148, 9, 51, 4, 9, 274, 57, 149, 9, 51, 336, 150]\n",
+            "\n",
+            "Padded sequence (length 50):\n",
+            "[  3  25   9 780   2 148   9  51   4   9 274  57 149   9  51 336 150   0\n",
+            "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "   0   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
+            "\n",
+            "Explanation: 33 zeros added at the end\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Padding is the process of standardizing all sequences to be the same length by adding zeros to sequences that are shorter than the specified maximum length. Neural networks like LSTMs require fixed-size inputs, and our reviews vary in length, so padding ensures uniform input size.\n",
+        "\n",
+        "I chose to use \"post-padding\", which adds zeros at the end of sequences that are shorter than the maximum length for the following reasons:\n",
+        "\n",
+        "* Natural Language Flow: In sentiment analysis, the beginning of a review often contains the most important sentiment information. Post-padding preserves the natural left-to-right flow of the language without inserting artificial zeros before the actual content or truncating early parts of the review if a review surpasses the maximum length. English is a left-to-right language, so \"pre-padding\" might be better used for a right-to-left language like Farsi or Arabic.\n",
+        "* LSTM Compatibility: LSTMs process sequences from left to right. Post-padding allows the LSTM to process all actual words before encountering padding, making it easier for the network to learn meaningful patterns.\n",
+        "\n",
+        "**Padding Parameters:**\n",
+        "\n",
+        "* `maxlen=50`: Maximum sequence length (determined in Part **B1**)\n",
+        "* `padding='post'`: Add zeros at the end of sequences until `maxlen` is reached\n",
+        "* `truncating='post`: If a sequence exceeds `maxlen`, tokens are removed from the end until the maximum length is reached\n",
+        "* `value=0`: Use 0 as the padding value"
+      ],
+      "metadata": {
+        "id": "S7wGL6mCZ_Y5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "MPytAqmkb8fN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Store padded sequences\n",
+        "X = padded_sequences\n",
+        "y = df['sentiment'].values\n",
+        "\n",
+        "print(f\"\\nFinal Data Shape:\")\n",
+        "print(f\"Features (X): {X.shape}\")\n",
+        "print(f\"Labels (y): {y.shape}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Wt1SBuv_bvN3",
+        "outputId": "871a6582-1f19-4da5-ea94-fc9490d17eba"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Final Data Shape:\n",
+            "Features (X): (990, 50)\n",
+            "Labels (y): (990,)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This code stores the full padded sequences with reviews as the X values and sentiment as the y values."
+      ],
+      "metadata": {
+        "id": "Qwdwmsj_bzIY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### B4. Categories of Sentiment"
       ],
       "metadata": {
