B4. Explanation of categories of sentiment

--- a/d604_task_2.ipynb
+++ b/d604_task_2.ipynb
@@ -2258,15 +2258,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "MPytAqmkb8fN"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "# Store padded sequences\n",
         "X = padded_sequences\n",
@@ -2322,6 +2313,20 @@
       ],
       "metadata": {
         "id": "L31XhnvPYvBP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This analysis uses **2 categories of sentiment:**\n",
+        "\n",
+        "* **0:** Negative sentiment\n",
+        "* **1:** Positive sentiment\n",
+        "\n",
+        "This a **binary classification** problem. For binary classification, the most appropriate activation function for the final dense layer is **sigmoid** because it outputs a value between 0 and 1, which can be interpreted as the probability that the review is negative. Typically, a threshold of greater than or equal to 0.5 is classified as positive (1), otherwise it's classified as negative (0)."
+      ],
+      "metadata": {
+        "id": "Z6z_Nt3DdFdN"
       }
     },
     {
