B5. Steps to prepare the data

--- a/d604_task_2.ipynb
+++ b/d604_task_2.ipynb
@@ -2348,6 +2348,71 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "# First split: Separate train split (70%)\n",
+        "X_train, X_temp, y_train, y_temp = train_test_split(\n",
+        "    X, y, test_size=0.3, random_state=42, stratify=y\n",
+        ")\n",
+        "\n",
+        "# Second split: Separate remaining data into validation and test split\n",
+        "X_val, X_test, y_val, y_test = train_test_split(\n",
+        "    X_temp, y_temp, test_size=0.5, random_state=42, stratify=y_temp\n",
+        ")\n",
+        "\n",
+        "print(\"Dataset Split:\")\n",
+        "print(f\"Training set: {len(X_train)} samples ({len(X_train)/len(X)*100:.1f}%)\")\n",
+        "print(f\"Validation set: {len(X_val)} samples ({len(X_val)/len(X)*100:.1f}%)\")\n",
+        "print(f\"Test set: {len(X_test)} samples ({len(X_test)/len(X)*100:.1f}%)\")\n",
+        "\n",
+        "print(\"\\nClass distribution:\")\n",
+        "print(f\"Training - Negative: {sum(y_train==0)}, Positive: {sum(y_train==1)}\")\n",
+        "print(f\"Validation - Negative: {sum(y_val==0)}, Positive: {sum(y_val==1)}\")\n",
+        "print(f\"Test - Negative: {sum(y_test==0)}, Positive: {sum(y_test==1)}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mTp1ti3YfE_N",
+        "outputId": "d874cabe-6f14-4cb4-c7be-d553f050bbf7"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dataset Split:\n",
+            "Training set: 693 samples (70.0%)\n",
+            "Validation set: 148 samples (14.9%)\n",
+            "Test set: 149 samples (15.1%)\n",
+            "\n",
+            "Class distribution:\n",
+            "Training - Negative: 348, Positive: 345\n",
+            "Validation - Negative: 74, Positive: 74\n",
+            "Test - Negative: 75, Positive: 74\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now that the data is cleaned, tokenized, and lemmatized, I use the code above to split the dataset into three sets: training, validation, and test. I chose a split of 70/15/15, which is one option within industry standards.\n",
+        "\n",
+        "* **Training set:** 70%\n",
+        "* **Validation set:** 15%\n",
+        "* **Testing set:** 15%\n",
+        "\n",
+        "In addition, I stratified the split to ensure that both positive and negative sentiments are proportionally represented in all three sets."
+      ],
+      "metadata": {
+        "id": "cfb507hZd7u8"
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### B6. Prepared Dataset"
