C2. Discuss the network architecture

--- a/d604_task_2.ipynb
+++ b/d604_task_2.ipynb
@@ -2657,6 +2657,39 @@
     {
       "cell_type": "markdown",
       "source": [
+        "The neural network consists of **4 layers:**\n",
+        "\n",
+        "1. **Embedding Layer (84,500 parameters)**\n",
+        "  * Converts integer word indices into dense 50-dimensional vectors\n",
+        "  * Input dimension: 1,690 (vocabulary size + 1 padding/OOV token)\n",
+        "  * Output dimension: 50\n",
+        "  * Input length: 50 tokens\n",
+        "  * Mask zero: True (ignores padding tokens during training)\n",
+        "\n",
+        "2. **LSTM Layer (29,440 parameters)**\n",
+        "  * 64 LSTM units\n",
+        "  * Processes the sequence and captures temporal dependencies\n",
+        "  * Returns only the final hidden state (`return_sequences=False)`\n",
+        "\n",
+        "3. **Dropout Layer (0 parameters)**\n",
+        "  * Dropout rate: 50%\n",
+        "  * Randomly drops connections during training to prevent overfitting, particularly given that this dataset is small\n",
+        "\n",
+        "4. **Dense Output Layer (65 parameters)**\n",
+        "  * 1 neuron with sigmoid activation\n",
+        "  * Outputs probability of positive sentiment (0 to 1)\n",
+        "\n",
+        "**Total Parameters: 114,005**\n",
+        "\n",
+        "The majority of parameters (74%) are in the embedding layer, which learns word representations. The LSTM layer accounts for 26% of parameters and is responsible for understanding sequential patterns in the text (Bourke, 2025)."
+      ],
+      "metadata": {
+        "id": "tRCKXAs4mFTG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### C3. Hyperparameters"
       ],
       "metadata": {
@@ -2943,6 +2976,7 @@
       "source": [
         "* Ahmad, I., Phd (2023). 50 Algorithms Every Programmer Should Know (2nd ed.). Packt Publishing.\n",
         "* Audevart, A., Banachewicz, K., & Massaron, L. (2021). Machine Learning Using TensorFlow Cookbook. Packt Publishing.\n",
+        "* Bourke, D. (2025). TensorFlow for Deep Learning Bootcamp: Zero to Mastery. Zero to Mastery. https://zerotomastery.io/courses/learn-tensorflow/\n",
         "* WGU Course Materials"
       ],
       "metadata": {
