C3. Discussion of activation function

--- a/d604_task_2.ipynb
+++ b/d604_task_2.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1349,7 +1350,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 607
+          "height": 535
         },
         "id": "Y6JMVrSxTd97",
         "outputId": "7355e83a-3ad3-49c4-9c86-63e9ebe71c80"
@@ -1534,7 +1535,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 518
+          "height": 405
         },
         "id": "c9_5ehvxyAJP",
         "outputId": "b1350265-205a-416e-ff01-2d650c5ea8ca"
@@ -2709,6 +2710,88 @@
       ],
       "metadata": {
         "id": "zkvfN8ekY8fZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Activation Function"
+      ],
+      "metadata": {
+        "id": "lkTXxCtypQvd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "For the final dense layer, I used the sigmoid activation function. This choice is optimal for binary classification tasks, such as determining sentiment as either positive or negative, because it outputs a probability between 0 and 1. This output effectively quantifies the likelihood of a positive review, thereby facilitating a clear distinction between positive and negative sentiments."
+      ],
+      "metadata": {
+        "id": "dQW-JjCppS9H"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Number of nodes per layer"
+      ],
+      "metadata": {
+        "id": "PpuKMvzfp_43"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "thWAjwlOqJBi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Loss function"
+      ],
+      "metadata": {
+        "id": "cauAbKk3qC5t"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "8goqkb0AqIwd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Optimizer"
+      ],
+      "metadata": {
+        "id": "rXxucTJXqFJN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "LXVvrdODqIcS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Stopping criteria"
+      ],
+      "metadata": {
+        "id": "GuOjAOpnqGYv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "JJl2HQq1qIMJ"
       }
     },
     {
