C3. Discussion of number of nodes per layer

--- a/d604_task_2.ipynb
+++ b/d604_task_2.ipynb
@@ -2724,7 +2724,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "For the final dense layer, I used the sigmoid activation function. This choice is optimal for binary classification tasks, such as determining sentiment as either positive or negative, because it outputs a probability between 0 and 1. This output effectively quantifies the likelihood of a positive review, thereby facilitating a clear distinction between positive and negative sentiments."
+        "For the final dense layer, I used the sigmoid activation function. This choice is optimal for binary classification tasks, such as determining sentiment as either positive or negative, because it outputs a probability between 0 and 1. This output effectively quantifies the likelihood of a positive review, thereby facilitating a clear distinction between positive and negative sentiments.\n",
+        "\n",
+        "When the output is greater than or equal to 0.5, we classify the review as positive (1); otherwise, we classify it as negative (0). This probabilistic interpretation also provides confidence scores for predictions, which can be valuable for business applications where we may want to flag uncertain predictions for human review."
       ],
       "metadata": {
         "id": "dQW-JjCppS9H"
@@ -2741,7 +2743,15 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "The embedding layer uses 50 dimensions to represent each word as a dense vector. This choice was justified in Part **B1**. In summary, 50 dimensions provide enough capacity for our vocabulary of approximately 1,690 words, while avoiding the risk of overfitting that would come with larger embeddings on a limited dataset of 990 reviews.\n",
+        "\n",
+        "The LSTM layer contains 64 units, again providing enough capacity to capture sequence patterns and context while reducing the risk of overfitting.\n",
+        "\n",
+        "The dropout layer is set to a rate of 0.5 (50%). During training, it randomly sets 50% of the input units to 0 at each update. This forces the network to learn redundant representations and prevents it from becoming too reliant on any single neuron, which is a very effective technique for avoiding overfitting (Bourke, 2025).\n",
+        "\n",
+        "The output layer has only 1 neuron, which works along with the sigmoid activation function, to produce a single probability value representing the likelihood of positive sentiment."
+      ],
       "metadata": {
         "id": "thWAjwlOqJBi"
       }
