C3. Discussion of loss function

--- a/d604_task_2.ipynb
+++ b/d604_task_2.ipynb
@@ -2767,7 +2767,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "I chose binary crossentropy as the loss function for this model. It is the standard choice for binary classification problems. It measures the difference between the predicted probability distribution and the true distribution. The loss is minimized when the model's predictions closely match the true labels, gives a higher penalty when the prediction is far from the truth, and works well with the sigmoid activation in the output layer."
+      ],
       "metadata": {
         "id": "8goqkb0AqIwd"
       }
