C3. Discussion of chosen optimizer

--- a/d604_task_2.ipynb
+++ b/d604_task_2.ipynb
@@ -2785,7 +2785,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "I chose to use the Adam (Adaptive Movement Estimation) optimizer with its default learning rate of 0.001 because it's widely used with LSTM models and combines the advantages of two other popular optimizers. The key benefit of Adam is that it automatically adapts the learning rate for each parameter individually during training and minimizes the amount of manual tuning necessary."
+      ],
       "metadata": {
         "id": "LXVvrdODqIcS"
       }
