C3. Discussion of stopping criteria

--- a/d604_task_2.ipynb
+++ b/d604_task_2.ipynb
@@ -2713,6 +2713,30 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.callbacks import EarlyStopping\n",
+        "\n",
+        "# Compile the model\n",
+        "model.compile(\n",
+        "    optimizer='adam',\n",
+        "    loss='binary_crossentropy',\n",
+        "    metrics=['accuracy']\n",
+        ")\n",
+        "\n",
+        "early_stopping = EarlyStopping(\n",
+        "    monitor='val_loss',\n",
+        "    patience=5,\n",
+        "    restore_best_weights=True\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "17VSXQmDuDnG"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "#### Activation Function"
@@ -2803,7 +2827,13 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "I implemented early stopping to prevent overfitting and ensure sufficient training. The early stopping callback monitors the validation loss and halts training when this metric stops improving, indicating the model has reached its optimal performance on unseen data.\n",
+        "\n",
+        "I configured early stopping with a patience of 5 epochs, meaning training continues as long as validation loss improves, but stops if no loss improvement occurs for 5 consecutive epochs. The callback is set to restore the model weights from the epoch with the best validation loss, ensuring we use the optimal version of the model.\n",
+        "\n",
+        "If the model learns early on, this early stopping criteria prevents continued use of computation power for limited-or-no gain. With a dataset of only 990 reviews total, we have to take these intentional efforts to prevent overfitting of the training data."
+      ],
       "metadata": {
         "id": "JJl2HQq1qIMJ"
       }
