D1. Discuss impact of stopping criteria on number of epochs when training the model

--- a/d604_task_2.ipynb
+++ b/d604_task_2.ipynb
@@ -2875,6 +2875,69 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Train the model with early stopping\n",
+        "history = model.fit(\n",
+        "    X_train, y_train,\n",
+        "    validation_data=(X_val, y_val),\n",
+        "    epochs=50,\n",
+        "    batch_size=32,\n",
+        "    callbacks=[early_stopping],\n",
+        "    verbose=1\n",
+        ")\n",
+        "\n",
+        "print(f\"\\nTraining stopped at epoch: {len(history.history['loss'])}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7hJdDVpoxtoO",
+        "outputId": "0a643e3e-449e-46d9-8d09-e5e34bbb29ff"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/50\n",
+            "\u001b[1m22/22\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 63ms/step - accuracy: 0.5300 - loss: 0.6926 - val_accuracy: 0.7027 - val_loss: 0.6891\n",
+            "Epoch 2/50\n",
+            "\u001b[1m22/22\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 45ms/step - accuracy: 0.7896 - loss: 0.6814 - val_accuracy: 0.7905 - val_loss: 0.6541\n",
+            "Epoch 3/50\n",
+            "\u001b[1m22/22\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 45ms/step - accuracy: 0.8783 - loss: 0.5794 - val_accuracy: 0.7905 - val_loss: 0.5578\n",
+            "Epoch 4/50\n",
+            "\u001b[1m22/22\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 74ms/step - accuracy: 0.9258 - loss: 0.3798 - val_accuracy: 0.7703 - val_loss: 0.6680\n",
+            "Epoch 5/50\n",
+            "\u001b[1m22/22\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 70ms/step - accuracy: 0.9648 - loss: 0.2021 - val_accuracy: 0.7770 - val_loss: 0.7425\n",
+            "Epoch 6/50\n",
+            "\u001b[1m22/22\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 44ms/step - accuracy: 0.9837 - loss: 0.1190 - val_accuracy: 0.7703 - val_loss: 1.0414\n",
+            "Epoch 7/50\n",
+            "\u001b[1m22/22\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 43ms/step - accuracy: 0.9829 - loss: 0.1149 - val_accuracy: 0.7703 - val_loss: 0.8482\n",
+            "Epoch 8/50\n",
+            "\u001b[1m22/22\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 44ms/step - accuracy: 0.9902 - loss: 0.0548 - val_accuracy: 0.7703 - val_loss: 0.9243\n",
+            "\n",
+            "Training stopped at epoch: 8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The early stopping callback monitored validation loss and stopped training at epoch 8 (out of a maximum of 50 epochs) because the validation loss had not improved for 5 consecutive epochs. The best validation loss of 0.5578 occurred at epoch 3, and although training continued in epochs 4-8, the validation loss progressively increased (0.6680 to 0.7425 to 1.0414 to 0.8482 to 0.9243), indicating the model was beginning to overfit to the training data.\n",
+        "\n",
+        "This is clearly demonstrated by the divergence between training and validation data. While training accuracy continued to improve dramatically from epoch 3 (87.83%) to epoch 8 (99.02%) and training loss decreased to just 0.0548, the validation accuracy plateaued around 77%, and validation loss actually worsened. This overfitting pattern shows the model was memorizing the training data rather than learning generalizable patterns.\n",
+        "\n",
+        "By stopping at epoch 8 and automatically restoring the model weights from epoch 3 (the epoch with the best validation loss), early stopping prevented further overfitting and saved approximately 42 epochs of unnecessary computation. Without early stopping, the model would have continued for all 50 epochs, resulting in a highly overfit model with poor generalization to unseen data. The stopping criteria successfully identified the optimal point in training and preserved the best-performing version of the model."
+      ],
+      "metadata": {
+        "id": "ZM6PZOITyWz9"
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### D2. Fitness"
