D2. Assess and discuss model fitness

--- a/d604_task_2.ipynb
+++ b/d604_task_2.ipynb
@@ -2963,6 +2963,83 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Evaluate on training and validation sets\n",
+        "train_loss, train_acc = model.evaluate(X_train, y_train, verbose=0)\n",
+        "val_loss, val_acc = model.evaluate(X_val, y_val, verbose=0)\n",
+        "\n",
+        "print(\"Model Fitness Assessment:\")\n",
+        "print(f\"Training accuracy: {train_acc * 100:.2f}%\")\n",
+        "print(f\"Validation accuracy: {val_acc * 100:.2f}%\")\n",
+        "print(f\"Difference: {abs(train_acc - val_acc) * 100:.2f}%\")\n",
+        "\n",
+        "print(\"\\nResult:\")\n",
+        "print(\"=\" * 60)\n",
+        "if abs(train_acc - val_acc) < 0.05:\n",
+        "    print(\"Model is well-fitted (difference < 5%)\")\n",
+        "elif train_acc > val_acc + 0.10:\n",
+        "    print(\"Model may be overfitting (training accuracy much higher)\")\n",
+        "else:\n",
+        "    print(\"Model may be underfitting (both accuracies low)\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IjpHrQkqi3I5",
+        "outputId": "6e6a28ca-38ff-44a0-f85c-8219bb229b15"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model Fitness Assessment:\n",
+            "Training accuracy: 93.07%\n",
+            "Validation accuracy: 74.32%\n",
+            "Difference: 18.75%\n",
+            "\n",
+            "Result:\n",
+            "============================================================\n",
+            "Model may be overfitting (training accuracy much higher)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**General Assessment:**\n",
+        "\n",
+        "The model shows signs of significant overfitting, with training accuracy (93.07%) being nearly 19 percentage points higher than validation accuracy (74.32%). This substantial gap indicates that the model has learned patterns specific to the training data that do not generalize well to unseen validation data. The model is essentially memorizing characteristics of the training reviews rather than learning robust, generalizable features of sentiment.\n",
+        "\n",
+        "**Actions Taken to Address Overfitting:**\n",
+        "\n",
+        "Despite implementing multiple overfitting strategies, the small dataset size (693 training samples) makes complete elimination of overfitting challenging. The following measures were already incorporated into the model architecture and training process:\n",
+        "\n",
+        "1. **Dropout Layer (50%):** A dropout rate of 0.5 was included after the LSTM layer to randomly disable half of the neurons during training, forcing the network to learn redundant representations and preventing over-reliance on specific features.\n",
+        "\n",
+        "2. **Early Stopping:** The training was halted at epoch 8 when validation loss stopped improving, preventing the model from training longer and memorizing even more training-specific patterns. The model weights were restored to epoch 3, which had the best validation performance.\n",
+        "\n",
+        "3. **Conservative Model Size:** The model uses only 64 LSTM units and 50-dimensional embeddings, keeping the total parameter count at 114,005. This is relatively modest given the complexity of language understanding, which helps limit the model's capacity to overfit.\n",
+        "\n",
+        "4. **Regularization through Architecture:** The LSTM layer itself provides some inherent regularization through its gating mechanisms, which control information flow and prevent the network from learning overly complex patterns.\n",
+        "\n",
+        "**Why Overfitting Still Persists:**\n",
+        "\n",
+        "Despite these measures, the 18.75% gap between training and validation accuracy reflects a fundamental challenge: the dataset is quite small for deep learning standards. With only 693 training examples and a vocabulary of 1,690 words, the model has limited diverse examples to learn from. This makes it difficult for the model to distinguish between genuine sentiment patterns and noise specific to the training set.\n",
+        "\n",
+        "**Conclusion:**\n",
+        "\n",
+        "While the overfitting is significant, the validation accuracy of 74.32% demonstrates that the model has learned some generalizable sentiment paterns. The implemented regularization techniques have complete overfitting, which would show validation accuracy near 50%, the equivalent to random guessing. For practical deployment, this model should be used with caution, potentially requiring human review of predictions, especially those with lower confidence scores. Future improvements could include collecting more training data, implementing data augmentation techniques, or exploring simpler model architectures that may generalize better on limited data."
+      ],
+      "metadata": {
+        "id": "2vIOKy0dkVHI"
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### D3. Training Process"
