E. Code to save the trained model as keras file

--- a/d604_task_2.ipynb
+++ b/d604_task_2.ipynb
@@ -3285,6 +3285,27 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Save the trained model\n",
+        "model.save('sentiment_model.keras')"
+      ],
+      "metadata": {
+        "id": "whtKoweN1gqh"
+      },
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This code saves the trained LSTM model in the keras format, containing the full model architecture, weights, and optimizer state."
+      ],
+      "metadata": {
+        "id": "2WrIR0241r4G"
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## F. Functionality"
